--- a/site barbosa/atividades.html
+++ b/site barbosa/atividades.html
@@ -29,7 +29,7 @@
   <main>
     <section class="content">
       <h1>atividades</h1>
-      <p>espaço pra texto</p>
+      <p>atividades</p>
       <img src="imagens.jpg" alt="atividades" />
     </section>
   </main>
