--- a/site barbosa/tecnico-adm.html
+++ b/site barbosa/tecnico-adm.html
@@ -27,7 +27,7 @@
 
   <main>
     <section class="content">
-      <h1>Ensino Médio</h1>
+      <h1>Técnico em Admistração</h1>
       <p>Informações sobre o currículo, horários, professores e diferenciais do nosso Ensino Médio.</p>
       <img src="imagens/ensino-medio.jpg" alt="Turma do Ensino Médio" />
     </section>
