--- a/site barbosa/tecnico-ds.html
+++ b/site barbosa/tecnico-ds.html
@@ -27,8 +27,8 @@
 
   <main>
     <section class="content">
-      <h1>Ensino Médio</h1>
-      <p>Informações sobre o currículo, horários, professores e diferenciais do nosso Ensino Médio.</p>
+      <h1>Técnico em Desenvolvimento de Sistemas</h1>
+      <p>Informações sobre o currículo, horários, professores e diferenciais do nosso Técnico em Desenvolvimento de Sistemas.</p>
       <img src="imagens/ensino-medio.jpg" alt="Turma do Ensino Médio" />
     </section>
   </main>
