--- a/site barbosa/tecnico-adm.html
+++ b/site barbosa/tecnico-adm.html
@@ -28,7 +28,7 @@
   <main>
     <section class="content">
       <h1>Técnico em Admistração</h1>
-      <p>Informações sobre o currículo, horários, professores e diferenciais do nosso Ensino Médio.</p>
+      <p>Informações sobre o currículo, horários, professores e diferenciais do nosso Técnico em Admistração.</p>
       <img src="imagens/ensino-medio.jpg" alt="Turma do Ensino Médio" />
     </section>
   </main>
