--- a/site barbosa/tecnico-ds.html
+++ b/site barbosa/tecnico-ds.html
@@ -28,7 +28,7 @@
   <main>
     <section class="content">
       <h1>Técnico em Desenvolvimento de Sistemas</h1>
-      <p>Informações sobre o currículo, horários, professores e diferenciais do nosso Técnico em Desenvolvimento de Sistemas.</p>
+      <p>Informações sobre o currículo, horários, professores e diferenciais do nosso Desenvolvimento de Sistemas.</p>
       <img src="imagens/ensino-medio.jpg" alt="Turma do Ensino Médio" />
     </section>
   </main>
