--- a/site barbosa/tecnico-enfermagem.html
+++ b/site barbosa/tecnico-enfermagem.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ensino Médio | Colégio Estadual Barbosa Ferraz</title>
+  <title>Enfermagem | Colégio Estadual Barbosa Ferraz</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
 </head>
@@ -27,8 +27,8 @@
 
   <main>
     <section class="content">
-      <h1>Ensino Médio</h1>
-      <p>Informações sobre o currículo, horários, professores e diferenciais do nosso Ensino Médio.</p>
+      <h1>Enfermagem </h1>
+      <p>Informações sobre o currículo, horários, professores e diferenciais do nossa Enfermagem.</p>
       <img src="imagens/ensino-medio.jpg" alt="Turma do Ensino Médio" />
     </section>
   </main>
